2009-06-18  Sverker Nilsson  <sverker@sverker-laptop>

	* setup.py (doit): long_description now starts with newline to
	look better in PKG-INFO

	* ANNOUNCE: added wordings about heapy_tutorial, pop bug and test.

	* guppy/heapy/test/test_all.py: added dependencies test

	* specs/index.gsl: Added heapy_tutorial link

	* specs/genguppydoc.py (GenGuppyDoc.gengsl): generate heapy_tutorial

	* specs/heapy_tutorial.gsl: new file

	* guppy/heapy/test/test_dependencies.py : new file

2009-06-16  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: Added interactive help to example which was
	moved to documentation section.

	* src/sets/bitset.c (mutbitset_pop): changed type of i from NyBit to
	int to work in 64 bits with test7 in sets/test.py .
	(bits_last): made it work with 64 bits by testing the upper 32-bit half
	(bits_first): made it use NyBits_N instead of NyBits_64 
	(bits_last):  made it use NyBits_N instead of NyBits_64 , NyBits_32
	(NyMutBitSet_pop): changed 1<<i to 1l<<i to work with 64 bits with
	test12 of test.py.

2009-06-12  Sverker Nilsson  <sverker@sverker-laptop>

	* ANNOUNCE: Tells about interactive help with example.

	* specs/index.gsl: Download section updated for 0.1.9. Credits
	added Yaroslav Halchenko.

2009-04-07  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Monitor.py: made import readline optional

	* setup.py (doit): package_data uses *.html & *.jpg

2009-03-08  Sverker Nilsson  <sverker@sverker-laptop>

	* ANNOUNCE: news for 0.1.9

2009-01-09  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/gsl/Tester.py (TestOf.make_cat.get_example_expr): Made the
	example values be regenerated each time. (Unless 0 is true.)
	Affects speed sometimes (an extra function call per arg) but may
	also be faster.

	* guppy/heapy/Use.py (_GLUECLAMP_.load): changed usereadline to
	use_readline to correspond to doc .

	* guppy/heapy/Prof.py (Menu.delete): Removed commented-out lines
	to delete commands.
